--- a/org.smeup.sys.dk.source.e4/.project
+++ b/org.smeup.sys.dk.source.e4/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.smeup.sys.dk.source.e4</name>
+	<name>org.smeup.sys.dk.source.jdt</name>
 	<comment></comment>
 	<projects>
 	</projects>
