--- a/org.smeup.sys.os.core/plugin.xml
+++ b/org.smeup.sys.os.core/plugin.xml
@@ -60,7 +60,7 @@
          id="application_e4"
          point="org.eclipse.core.runtime.products">
       <product
-            application="org.asup.rt.core.e4.application"
+            application="org.smeup.sys.rt.core.e4.application"
             name="As.UP Application E4">
          <property
                name="appName"
