--- a/org.smeup.sys.os.type.base/.project
+++ b/org.smeup.sys.os.type.base/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.smeup.sys.os.core.type.base</name>
+	<name>org.smeup.sys.os.type.base</name>
 	<comment></comment>
 	<projects>
 	</projects>
