--- a/org.smeup.sys.ui.pdme.e4/plugin.xml
+++ b/org.smeup.sys.ui.pdme.e4/plugin.xml
@@ -8,31 +8,31 @@
    <extension point="org.eclipse.ui.popupMenus">
          
       <objectContribution
-            id="org.asup.ui.pdme.e4.ecore.contribution1"
+            id="org.asup.ui.epdm.emf.ecore.contribution1"
             nameFilter="*.ecore"
             objectClass="org.eclipse.core.resources.IFile">
          <menu
                icon="icons/asup_24.png"
-               id="org.asup.ui.pdme.e4.ecore.menu1"
+               id="org.asup.ui.epdm.emf.ecore.menu1"
                label="As.UP"
                path="additions">
             <separator name="generator"/>
          </menu>
          <action
                label="Create genmodel file"
-               class="org.smeup.sys.ui.pdme.e4.actions.GenModelGeneratorAction"
-               menubarPath="org.asup.ui.pdme.e4.ecore.menu1/generator"
+               class="org.smeup.sys.ui.epdm.emf.actions.GenModelGeneratorAction"
+               menubarPath="org.asup.ui.epdm.emf.ecore.menu1/generator"
                enablesFor="1"
-               id="org.asup.ui.pdme.e4.ecore.genaction">
+               id="org.asup.ui.epdm.emf.ecore.genaction">
          </action>
       </objectContribution>
       <objectContribution
-            id="org.asup.ui.pdme.e4.ecore.contribution2"
+            id="org.asup.ui.epdm.emf.ecore.contribution2"
             nameFilter="commands.xmi"
             objectClass="org.eclipse.core.resources.IFile">
          <menu
                icon="icons/asup_24.png"
-               id="org.asup.ui.pdme.e4.ecore.menu2"
+               id="org.asup.ui.epdm.emf.ecore.menu2"
                label="As.UP"
                path="additions">
             <separator
@@ -40,11 +40,11 @@
             </separator>
          </menu>
          <action
-               class="org.smeup.sys.ui.pdme.e4.actions.NormalizeCommandsAction"
+               class="org.smeup.sys.ui.epdm.emf.actions.NormalizeCommandsAction"
                enablesFor="1"
-               id="org.asup.ui.pdme.e4.ecore.normalizeCommands"
+               id="org.asup.ui.epdm.emf.ecore.normalizeCommands"
                label="Normalize Commands"
-               menubarPath="org.asup.ui.pdme.e4.ecore.menu2/generator">
+               menubarPath="org.asup.ui.epdm.emf.ecore.menu2/generator">
          </action>
       </objectContribution>
       
