--- a/org.smeup.sys.il.esam/build.properties
+++ b/org.smeup.sys.il.esam/build.properties
@@ -1,8 +1,6 @@
-#
-
 bin.includes = .,\
                META-INF/,\
-               plugin.xml
-jars.compile.order = .
+               plugin.xml,\
+               plugin.properties
 source.. = src/
 output.. = bin/
