--- a/org.smeup.sys.os.core.cdo/build.properties
+++ b/org.smeup.sys.os.core.cdo/build.properties
@@ -8,8 +8,7 @@ bin.includes = .,\
                model/,\
                META-INF/,\
                plugin.xml,\
-               plugin.properties,\
-               splash.bmp
+               plugin.properties
 jars.compile.order = .
 source.. = src/
 output.. = bin/
