--- a/org.smeup.sys.il.memo.cdo.store/plugin.properties
+++ b/org.smeup.sys.il.memo.cdo.store/plugin.properties
@@ -4,10 +4,5 @@
 # which accompanies this distribution, and is available at
 # http://www.eclipse.org/legal/epl-v10.html
 
-bin.includes = .,\
-               META-INF/,\
-               plugin.xml,\
-               plugin.properties
-jars.compile.order = .
-source.. = src/
-output.. = bin/
+pluginName = As.UP Integrated Language Memory CDO Store Model
+providerName = www.example.org
