--- a/org.smeup.sys.il.memo.cdo.store/build.properties
+++ b/org.smeup.sys.il.memo.cdo.store/build.properties
@@ -5,6 +5,7 @@
 # http://www.eclipse.org/legal/epl-v10.html
 
 bin.includes = .,\
+               model/,\
                META-INF/,\
                plugin.xml,\
                plugin.properties
