--- a/org.smeup.sys.il.memo/plugin.properties
+++ b/org.smeup.sys.il.memo/plugin.properties
@@ -4,5 +4,5 @@
 # which accompanies this distribution, and is available at
 # http://www.eclipse.org/legal/epl-v10.html
 
-pluginName = As.UP Integrated Language Memory Model
+pluginName = As.UP Integrated Language Memory
 providerName = www.example.org
