Migliorie il.mind

--- a/org.smeup.sys.il.mind.gnu/build.properties
+++ b/org.smeup.sys.il.mind.gnu/build.properties
@@ -3,4 +3,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                lib/,\
-               lib/gnuprologjava-0.2.5.jar
+               theories/,\
+               lib/gnuprologjava-0.2.6.jar
