Export ASUP-INF!

--- a/org.smeup.sys.os.module.base/build.properties
+++ b/org.smeup.sys.os.module.base/build.properties
@@ -1,3 +1,5 @@
 source.. = src/
 output.. = bin/
-bin.includes = META-INF/,\.
+bin.includes = META-INF/,\
+               .,\
+               ASUP-INF/
