WRKACTTHD - Versione con uso di jvmtop

--- a/org.smeup.sys.os.core.base/build.properties
+++ b/org.smeup.sys.os.core.base/build.properties
@@ -3,6 +3,7 @@
 bin.includes = .,\
                META-INF/,\
                ASUP-INF/,\
-               plugin.properties
+               plugin.properties,\
+               lib/jvmtop_lib.jar
 source.. = src/
 output.. = bin/
