--- a/org.smeup.sys.os.core.base/build.properties
+++ b/org.smeup.sys.os.core.base/build.properties
@@ -1,9 +1,6 @@
-#
-
-bin.includes = .,\
-               META-INF/,\
-               ASUP-INF/,\
-               plugin.properties,\
-               lib/jvmtop_lib.jar
 source.. = src/
 output.. = bin/
+bin.includes = META-INF/,\
+               .,\
+               ASUP-INF/,\
+               plugin.properties
