--- a/org.smeup.sys.dk.test/plugin.xml
+++ b/org.smeup.sys.dk.test/plugin.xml
@@ -8,7 +8,7 @@
    <extension point="org.eclipse.emf.ecore.generated_package">
       <!-- @generated fw-test -->
       <package
-            uri="http://www.smeup.org/asup/fw/test"
+            uri="http://www.smeup.org/asup/dk/test"
             class="org.smeup.sys.dk.test.QDevelopmentKitTestPackage"
             genModel="model/dk-test.genmodel"/>
    </extension>
