Inserita libreria Gson

--- a/org.smeup.sys.et.json/build.properties
+++ b/org.smeup.sys.et.json/build.properties
@@ -2,4 +2,5 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               lib/java-json.jar
+               lib/java-json.jar,\
+               lib/gson-2.5.jar
