--- a/org.smeup.sys.rt.core.e4/plugin.xml
+++ b/org.smeup.sys.rt.core.e4/plugin.xml
@@ -23,10 +23,10 @@
          point="org.eclipse.core.runtime.products">
       <product
             application="org.smeup.sys.rt.core.e4.application"
-            name="As.UP Shell E4">
+            name="As.UP Application E4">
          <property
                name="appName"
-               value="As.UP Shell E4">
+               value="As.UP Application E4">
          </property>
       </product>
    </extension>
