Rivista nomenclatura HazelCast

--- a/org.smeup.sys.et.hazel/.project
+++ b/org.smeup.sys.et.hazel/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.smeup.sys.il.lock.haze</name>
+	<name>org.smeup.sys.et.hazel</name>
 	<comment></comment>
 	<projects>
 	</projects>
