--- a/org.smeup.sys.il.expr.test/.project
+++ b/org.smeup.sys.il.expr.test/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.smeup.sys.il.expr.ibmi.test</name>
+	<name>org.smeup.sys.il.expr.test</name>
 	<comment></comment>
 	<projects>
 	</projects>
