--- a/org.smeup.sys.gen.p2/pom.xml
+++ b/org.smeup.sys.gen.p2/pom.xml
@@ -11,5 +11,37 @@
 		<version>0.8.0-SNAPSHOT</version>
 		<relativePath>../org.smeup.sys.gen.maven</relativePath>
 	</parent>
+
+	<build>
+		<plugins>
+			
+			<!-- 
+			<plugin>
+				<groupId>org.eclipse.tycho.extras</groupId>
+				<artifactId>tycho-p2-extras-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-to-central-site</id>
+						<phase>package</phase>
+						<goals>
+							<goal>mirror</goal>
+						</goals>
+						<configuration>
+							<source>
+								<repository>
+									<url>${project.baseUri}/target/repository</url>
+								</repository>
+							</source>
+							<append>true</append>
+							<destination>c:/Export/P2Mirror</destination>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			-->
+			
+		</plugins>
+	</build>
+
 </project>
 	
