Aggiornamento AntLR devk e plugin

--- a/org.smeup.sys.ui.epdm.antlr/build.properties
+++ b/org.smeup.sys.ui.epdm.antlr/build.properties
@@ -6,6 +6,7 @@ bin.includes = plugin.xml,\
                icons/,\
                lib/,\
                lib/antlrworks-1.5.2-complete.jar,\
-               antlr_includes/
+               antlr_includes/,\
+               lib/antlr-3.5.2-complete-no-st3.jar
 
                
