Aggiornamento scripts maven per compilazione sys 0.9.0

--- a/org.smeup.sys.gen.maven/smeup-sys.properties
+++ b/org.smeup.sys.gen.maven/smeup-sys.properties
@@ -2,7 +2,7 @@
 
 #Utente git
 git.user			= smeup
-git.pwd				= smeup++2015
+git.pwd				= smeup!!2016
 git.user.name		= smeup
 git.user.email		= asupdev@gmail.com
 
