--- a/org.smeup.sys.gen.maven/pom.xml
+++ b/org.smeup.sys.gen.maven/pom.xml
@@ -17,9 +17,9 @@
 		<!-- Select the P2 repository to be used when resolving dependencies -->
 
 		<repository>
-			<id>eclipse-mars</id>
+			<id>eclipse-neon</id>
 			<layout>p2</layout>
-			<url>http://download.eclipse.org/releases/mars</url>
+			<url>http://download.eclipse.org/releases/neon</url>
 		</repository>
 
 		<repository>
