--- a/org.smeup.sys.os.scde.cron/build.properties
+++ b/org.smeup.sys.os.scde.cron/build.properties
@@ -1,4 +1,10 @@
+#
+
+bin.includes = .,\
+               model/,\
+               META-INF/,\
+               plugin.xml,\
+               plugin.properties
+jars.compile.order = .
 source.. = src/
-output.. = target/classes/
-bin.includes = META-INF/,\
-               .
+output.. = bin/
