--- a/org.smeup.sys.dk.compiler.base/build.properties
+++ b/org.smeup.sys.dk.compiler.base/build.properties
@@ -2,4 +2,5 @@ source.. = src/
 output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
-               ASUP-INF/
+               ASUP-INF/,\
+               formatter/
