--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>asup_0_8_0</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <artifactId>com.smeup.asup</artifactId>
+  <version>0.9.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modules>
     <module>org.smeup.sys.co.core</module>
@@ -189,4 +189,5 @@
       </plugin>
     </plugins>
   </build>
+  <groupId>com.smeup</groupId>
 </project>
