--- a/org.smeup.sys.gen.maven/pom.xml
+++ b/org.smeup.sys.gen.maven/pom.xml
@@ -189,6 +189,7 @@
     <module>../org.smeup.sys.ft.devk.base</module>
     <module>../org.smeup.sys.ft.devk.test</module>
     <module>../org.smeup.sys.ft.eclipse</module>
+    <module>../org.smeup.sys.ft.javax</module>
     <module>../org.smeup.sys.ft.eclipse.dtp</module>
     <module>../org.smeup.sys.ft.eclipse.ecf</module>
     <module>../org.smeup.sys.ft.eclipse.flux</module>
@@ -292,6 +293,7 @@
     <module>../org.smeup.sys.os.cmd.test</module>
     <module>../org.smeup.sys.os.core</module>
     <module>../org.smeup.sys.os.core.base</module>
+    <module>../org.smeup.sys.os.core.e4</module>
     <module>../org.smeup.sys.os.core.test</module>
     <module>../org.smeup.sys.os.dbf.base</module>
     <module>../org.smeup.sys.os.dspf.base</module>
