--- a/org.smeup.sys.gen.maven/pom.xml
+++ b/org.smeup.sys.gen.maven/pom.xml
@@ -260,6 +260,8 @@
     <module>../org.smeup.sys.il.core.asf</module>
     <module>../org.smeup.sys.il.core.base</module>
     <module>../org.smeup.sys.il.core.e4</module>
+    <module>../org.smeup.sys.il.core.emf</module>
+    <module>../org.smeup.sys.il.core.osgi</module>
     <module>../org.smeup.sys.il.core.test</module>
     <module>../org.smeup.sys.il.data</module>
     <module>../org.smeup.sys.il.data.jdbc</module>
@@ -336,6 +338,7 @@
     <module>../org.smeup.sys.rt.auth.base</module>
     <module>../org.smeup.sys.rt.core</module>
     <module>../org.smeup.sys.rt.core.e4</module>
+    <module>../org.smeup.sys.rt.core.base</module>
     <module>../org.smeup.sys.rt.core.felix</module>
     <module>../org.smeup.sys.rt.core.test</module>
     <module>../org.smeup.sys.rt.repo</module>
